fix modal spacing

--- a/css/bundled.css
+++ b/css/bundled.css
@@ -110,7 +110,7 @@
     align-items: flex-start;
     justify-content: center;
     height: 150px;
-    padding: 0 60px;
+    padding: 15px 60px;
     box-shadow: 0 0px 1px rgba(91, 97, 106, 0.1); }
     .modal .modal-header .work--partner, .modal .modal-header .work--project {
       margin: 0; }
@@ -154,7 +154,7 @@
     position: relative;
     height: calc(100% - 150px);
     margin: 0 10px 0 60px;
-    padding: 0 110px 30px 0;
+    padding: 15px 110px 30px 0;
     overflow-y: auto; }
     .modal .modal-body .work-detail {
       margin-bottom: 60px; }
